--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,20 +1,38 @@
 @charset "ISO-8859-1";
 
-.inputForm {
+.inputForm-left {
+	float: left;
 	border: 2px solid black;
 	border-radius: 10px;
 	color: black;
 	background: powderblue;
 	width: 25%;
 	height: 20%;
-	margin-left: 15px;
+	margin-left: 2%;
+	margin-top: 25%;
+	padding: 10px;
+}
+
+.inputForm-right {
+	border: 2px solid black;
+	border-radius: 10px;
+	color: black;
+	background: powderblue;
+	width: 25%;
+	height: 20%;
+	margin-left: 73%;
 	margin-top: 15px;
 	padding: 10px;
 }
 
 .startButton {
 	margin-top: 30px;
-	margin-left: 235px;
+	margin-left: 90%;
+	background: #d9b800;
+	color: black;
+	border: 1px solid black;
+	border-radius: 7px;
+	padding: 15px;
 }
 
 .choice {
