--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -42,3 +42,14 @@
 	border-radius: 10px;
 	margin-top: 5px;
 }
+
+.card1 {
+	margin-top: 5%;
+	margin-left: 2%;
+	border: 2px solid black;
+	background: powderblue;
+	color: black;
+	padding: 15px;
+	border-radius: 10px;
+	width: 25%;
+}
