--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -67,3 +67,20 @@
 	border-radius: 10px;
 	width: 25%;
 }
+
+.confirmCube {
+	border: 2px solid black;
+	background: white;
+	color: black;
+	padding: 15px;
+	width: 25%;
+	margin-top: 3%;
+	margin-left: 3%;
+	border-radius: 10px;
+}
+
+
+
+
+
+
