--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -57,6 +57,15 @@
 	margin-top: 5px;
 }
 
+.parkChoice1 {
+	border: 2px solid black;
+	padding: 5px;
+	background: white;
+	border-radius: 10px;
+	margin-top: 5px;
+	width: 30%;
+}
+
 .card1 {
 	margin-top: 2%;
 	margin-left: 2%;
