--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -65,7 +65,6 @@
 	color: black;
 	padding: 15px;
 	border-radius: 10px;
-	width: 25%;
 }
 
 .confirmCube {
@@ -77,6 +76,15 @@
 	margin-top: 3%;
 	margin-left: 3%;
 	border-radius: 10px;
+}
+
+.grayColor {
+	background-color: gray;
+	
+}
+
+table, th, td {
+  border: 1px solid black;
 }
 
 
