--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -115,6 +115,66 @@
 	color: darkred;
 }
 
+div.relative {
+  position: relative;
+  width: 1200px;
+  height: 800px;
+  margin: 0 auto;
+  background-image: url(images/watch-your-backpack-title-screen.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+div.absolute {
+  position: absolute;
+  top: 70%;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
+
+.column {
+  float: left;
+  width: 25%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+div.goldLine {
+  width: 25%;
+  height: 120%;
+  background-color: #FFFFFF;
+  opacity: 0.9;
+  text-align: center;
+  padding-top: 15px;
+}
+
+div.goldTeam {
+  width: 25%;
+  height: 120%;
+  background-color: #FFFFFF;
+  opacity: 0.9;
+  text-align: center;
+}
+
+.lines {
+border: .7px solid black;
+width: 90%;
+}
+
+.center-title {
+  position: absolute;
+  top: 88%;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  
+}
+
 /* table, th, td {
   border: 1px solid black;
 } */
