more jsp goodness

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -276,6 +276,39 @@ div.center-space-tall {
   border-radius: 10px;
 }
 
+div.left-space-tall-2up {
+  position: absolute;
+  background-color: #c8e4f9;
+  top: 185px;
+  left: 152px;
+  width: 276px;
+  height: 450px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+div.right-space-tall-2up {
+  position: absolute;
+  background-color: #c8e4f9;
+  top: 185px;
+  left: 574px;
+  width: 276px;
+  height: 450px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+div.right-space-tall-2upb {
+  position: absolute;
+  background-color: #c8e4f9;
+  top: 165px;
+  left: 615px;
+  width: 350px;
+  height: 450px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
 div.top-space {
   position: absolute;
   background-color: #c8e4f9;
