--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -49,6 +49,28 @@
 	padding: 15px;
 }
 
+.start-button-confirm {
+	position: absolute;
+  	top: 680px;
+  	left: 470px;
+	background: #d9b800;
+	color: black;
+	border: 1px solid black;
+	border-radius: 7px;
+	padding: 15px;
+}
+
+.start-button-confirm2 {
+	position: absolute;
+  	top: 200px;
+  	left: 470px;
+	background: #d9b800;
+	color: black;
+	border: 1px solid black;
+	border-radius: 7px;
+	padding: 15px;
+}
+
 .playButton {
 	margin-top: 75px;
 	margin-left: 0%;
@@ -255,7 +277,7 @@ div.right-space {
   position: absolute;
   background-color: #c8e4f9;
   top: 300px;
-  left: 685px;
+  left: 770px;
   width: 276px;
   height: 325px;
   padding: 10px;
